tests/ui/impl-trait/issue-55872.stderr
error: type parameter `T` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-55872.rs:12:20
   |
LL |     fn foo<T>() -> Self::E {
   |                    ^^^^^^^

error: aborting due to 1 previous error

